Fix double borders on the tables

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -950,7 +950,6 @@ main#main-content #mini-panel-media_appearances thead {
 main#main-content #mini-panel-media_appearances th {
   border: 1px none #C7BC8F;
   border-top: 1px solid #C7BC8F;
-  border-bottom: 1px solid #C7BC8F;
   background: transparent;
 }
 main#main-content #mini-panel-media_appearances th:first-child {
@@ -960,6 +959,10 @@ main#main-content #mini-panel-media_appearances th:first-child {
 main#main-content #mini-panel-media_appearances th:last-child {
   border-right: 1px solid #C7BC8F;
   border-radius: 0 6px 0 0;
+}
+main#main-content #mini-panel-media_appearances th th:only-child {
+  border-top: 1px solid #C7BC8F;
+  border-radius: 6px 6px 0 0;
 }
 main#main-content #mini-panel-media_appearances tbody tr:last-child td:first-child {
   border-radius: 0 0 0 0.6em;
